30-04-2005 Qball <Qball@qballcow.nl>
	* src/libmpd.[c|h]:	Support for stats. (total
	songs,artists,albums,uptime,playtime)
	* glade/gmpc.glade:	Added server stats
	* glade/id3_info.c:	Length shows elapsed time when showing playing
	song.
	* glade/gmpc.glade:	in the id3_window_info changed all entries to
	labels and added severall options.
	* src/id3_info.c:	Added support for genre, composer,path and
	bitrate (live updating)
	* src/strfsong.c:	Added support for genre and composer.
	* src/strfsong.c:	f.e. if no title %title% is never shown.
	* src/libmpdclient.c|h:	Added support for composer and genre.
	* src/libmpd.c:		Added mpd_ob_status_get_bitrate


29-04-2005 Qball <Qball@qballcow.nl>
	* glade/gmpc.glade:	Markup editor window now uses gmpc icon
27-04-2005 Qball <Qball@qballcow.nl>
	* doc/future.txt:	added
	* doc/0.12.txt:		added
	* doc/markup.txt:	added
	* doc/keybindings.txt:	Document with some keybinding listed.
	* src/libmpdclient.[c|h]:	Updated to svn version.

26-04-2005 Qball <Qball@qballcow.nl>
	* po/ru.po:		Added russian translation. thanks to SK
	
25-04-2005 Qball <Qball@QballCow.nl>
	* src/libmpd.[c|h]:	Included Copyright notice in file
	* src/player.c:		Keybinding for playlist search (j)
	* src/player.c:		Keybinding for song information (i)
	* src/playlist.c:	Using gtk_window_present again, maybe solving
	thoru's focus problem.
	* playlist:		Added alt-s focus for search entry box.
	* src/playlist3.c:	Fixed keybinding when non-tree selected. (a
	signal handler got lost somewhere.)
	* src/player.c:		Player window shows song title.
	* glade/playlist3.glade:	Fixed alt-s keybinding.


17-04-2005 Qball <qball@qballcow.nl>
	* src/libmpd.c:		Update changed notification function;
	* src/playlist3.c:	making a status icon and status message on update changed.

15-04-2005 Qball <qball@qballcow.nl>
	* src/libmpd.c:		Correct parsing and tokenizing of string..
	keeping regex correct.. (respecting () and []).